--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
       * {
         padding: 0;
         margin: 0;
-        font-family: 'Roboto', sans-serif;
+        font-family: "Roboto", sans-serif;
       }
     </style>
     <title>React App</title>
+    <script type="module">
+      import { Buffer } from "buffer";
+      window.Buffer = Buffer;
+    </script>
   </head>
   <body>
     <div id="root"></div>
