--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       }
     </style>
     <title>React App</title>
-    <script type="module">
+    <!-- <script type="module">
       import { Buffer } from "buffer";
       window.Buffer = Buffer;
-    </script>
+    </script> -->
   </head>
   <body>
     <div id="root"></div>
