--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       import { Buffer } from "buffer";
       window.Buffer = Buffer;
     </script> -->
-    <base href="https://heroic-cat-897292.netlify.app" />
+    <!-- <base href="https://heroic-cat-897292.netlify.app" /> -->
   </head>
   <body>
     <div id="root"></div>
