made some changes

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       window.Buffer = Buffer;
     </script> -->
     <base href="https://file-shop.netlify.app" />
+    <!-- "homepage":"https://file-shop.netlify.app", -->
   </head>
   <body>
     <div id="root"></div>
